implementacao author/livro